# SPDX-License-Identifier: GPL-3.0-or-later

# Install kresctl completion for bash
install_data(
  sources: 'kresctl.bash',
  rename: 'kresctl',
  install_dir: completions_dir / 'bash-completion' / 'completions',
)

# Install kresctl completion for fish
install_data(
  sources: 'kresctl.fish',
  install_dir: completions_dir / 'fish' / 'vendor_completions.d',
)
